--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>취급주의의 협곡에 오신걸 환영합니다</title>
   <meta name="description" content="수원하이텍고 프로젝트 팀 '취급주의'의 팀원 소개 페이지입니다. 열정과 개성을 담은 학생들이 함께한 개발팀입니다." />
   <meta name="keywords" content="취급주의, 팀 소개, 수원하이텍고, 웹페이지, 학생 프로젝트" />
+  <meta name="google-site-verification" content="jkBcg_sVPe68vt3MXwWlqn-wd8G8Wnu6ROBxv0PZsx8" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
